--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "awesomebus.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify -t babelify ./awesomebus.js -o ./awesomebus-bundle.js --insert-globals --debug"
   },
   "repository": {
     "type": "git",
